# TariffCalculator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  REPOSITORY_STRUCTURE.md  calculate_tariffs.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tariff_results_sudestada.json  test.py
api/: app.py
src/: __init__.py  parser.py  port_tariff.md  section_rag_calculator.py  section_rag_retriever.py  tariff_document.md
