[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "port-tariff-rag-system"
version = "1.0.0"
description = "Chunked RAG system for calculating South African port tariffs"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Port Tariff RAG Team", email = "team@port-tariff-rag.com"}
]
maintainers = [
    {name = "Port Tariff RAG Team", email = "team@port-tariff-rag.com"}
]
keywords = ["port", "tariff", "rag", "llm", "pdf", "calculation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.3",
    "flask-cors>=4.0.0",
    "marshmallow>=3.20.1",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.1",
    "llama-parse>=0.4.4",
    "llama-index-core>=0.10.57",
    "llama-index-llms-gemini>=0.1.11",
    "llama-index-embeddings-huggingface>=0.2.2",
    "sentence-transformers>=2.2.2",
    "google-generativeai>=0.7.2",
    "chromadb>=0.4.15",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "requests>=2.31.0",
    "pydantic>=2.4.2",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.9.1",
    "flake8>=6.1.0",
    "mypy>=1.6.1",
    "bandit>=1.7.5",
]
prod = [
    "gunicorn>=21.2.0",
    "uvicorn>=0.23.2",
]

[project.urls]
Homepage = "https://github.com/your-org/port-tariff-rag-system"
Documentation = "https://github.com/your-org/port-tariff-rag-system/blob/main/README.md"
Repository = "https://github.com/your-org/port-tariff-rag-system"
Issues = "https://github.com/your-org/port-tariff-rag-system/issues"
Changelog = "https://github.com/your-org/port-tariff-rag-system/blob/main/CHANGELOG.md"

[project.scripts]
port-tariff-rag = "src.api.app:run_app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

